# material-matchmaker

./: .env  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 466a95f39e54_initial_migration.py  790c7229f16f_add_name_to_material_property.py
app/: main.py  meta.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: materials.py
app/controllers/: base.py  material_controller.py
app/db/: database.py
app/models/: material.py  material_property.py  property.py  table_model.py
app/repositories/: __init__.py  base.py  custom_filters.py  material.py
app/schemas/: material.py
app/shemas/: material_property.py  property.py
